examples/test/testpolicy1449.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1449
  namespace: namespace188
spec:
  podSelector:
    matchLabels:
      key46: value6
      key34: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value28
          key29: value49
          key42: value12
      podSelector:
        matchLabels:
          key24: value22
          key39: value48
          key41: value18
